--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap');
 
 * {
   box-sizing: border-box;
@@ -10,7 +10,7 @@ body {
   justify-content: center;
   height: 100vh;
   background-color: #1c1c1c;
-  font-family: "Inter", sans-serif;
+  font-family: 'Inter', sans-serif;
 }
 
 .wrapper {
@@ -153,7 +153,7 @@ main {
   font-weight: 500;
 }
 
-.rating {
+.movie__rating {
   font-size: 12px;
   margin-left: 0.25rem;
   display: inline-flex;
@@ -203,7 +203,7 @@ main {
   padding: 2rem 3rem;
 }
 
-.pagination a {
+.pagination__btn {
   text-decoration: none;
   font-weight: bold;
   color: #4b4b4b;
@@ -231,7 +231,7 @@ main {
   animation: lds-spinner 1.2s linear infinite;
 }
 .lds-spinner div:after {
-  content: " ";
+  content: ' ';
   display: block;
   position: absolute;
   top: 3px;
@@ -297,6 +297,8 @@ main {
     opacity: 0;
   }
 }
+
+/* --------- MEDIA QUERIES ---------- */
 
 @media (max-width: 500px) {
   .wrapper {
